// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary Status Component should allow label to be optional 1`] = `
<div
  class="monSummaryStatusNoWrap"
  intl="[object Object]"
>
  <div
    class="euiFlexGroup css-eu1fwp-euiFlexGroup-responsive-m-spaceBetween-center-row"
  >
    <div
      class="euiFlexItem eui-textTruncate css-kpsrin-euiFlexItem-growZero"
      style="max-width:200px"
    >
      <div
        class="euiStat monSummaryStatusNoWrap__stat css-10hx1zo-euiStat-left"
        data-test-subj="status"
      >
        <div
          class="euiText euiStat__description css-1f3uq2g-euiText-s"
        >
          <p
            aria-hidden="true"
          >
            Status
          </p>
        </div>
        <p
          aria-hidden="true"
          class="euiTitle euiStat__title css-1qzsrmj-euiTitle-xxxs-euiStat__title-default"
        >
          Status: 
          <span
            alt="Status: yellow"
            color="warning"
            data-euiicon-type="dot"
            data-test-subj="statusIcon"
          />
           Yellow
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
      data-test-subj="transportAddress"
      style="max-width:200px"
    >
      <div
        class="euiStat monSummaryStatusNoWrap__stat css-10hx1zo-euiStat-left"
      >
        <div
          class="euiText euiStat__description css-1f3uq2g-euiText-s"
        >
          <p
            aria-hidden="true"
          />
        </div>
        <p
          aria-hidden="true"
          class="euiTitle euiStat__title css-1qzsrmj-euiTitle-xxxs-euiStat__title-default"
        >
          127.0.0.1:9300
        </p>
        <p
          class="css-gb1zbv-euiScreenReaderOnly"
        >
           127.0.0.1:9300
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
      data-test-subj="documentCount"
      style="max-width:200px"
    >
      <div
        class="euiStat monSummaryStatusNoWrap__stat css-10hx1zo-euiStat-left"
      >
        <div
          class="euiText euiStat__description css-1f3uq2g-euiText-s"
        >
          <p
            aria-hidden="true"
          >
            Documents
          </p>
        </div>
        <p
          aria-hidden="true"
          class="euiTitle euiStat__title css-1qzsrmj-euiTitle-xxxs-euiStat__title-default"
        >
          24.8k
        </p>
        <p
          class="css-gb1zbv-euiScreenReaderOnly"
        >
          Documents 24.8k
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Summary Status Component should allow status to be optional 1`] = `
<div
  class="monSummaryStatusNoWrap"
  intl="[object Object]"
>
  <div
    class="euiFlexGroup css-eu1fwp-euiFlexGroup-responsive-m-spaceBetween-center-row"
  >
    <div
      class="euiFlexItem eui-textTruncate css-kpsrin-euiFlexItem-growZero"
      style="max-width:200px"
    />
    <div
      class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
      data-test-subj="freeDiskSpace"
      style="max-width:200px"
    >
      <div
        class="euiStat monSummaryStatusNoWrap__stat css-10hx1zo-euiStat-left"
      >
        <div
          class="euiText euiStat__description css-1f3uq2g-euiText-s"
        >
          <p
            aria-hidden="true"
          >
            Free Disk Space
          </p>
        </div>
        <p
          aria-hidden="true"
          class="euiTitle euiStat__title css-1qzsrmj-euiTitle-xxxs-euiStat__title-default"
        >
          173.9 GB
        </p>
        <p
          class="css-gb1zbv-euiScreenReaderOnly"
        >
          Free Disk Space 173.9 GB
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
      data-test-subj="documentCount"
      style="max-width:200px"
    >
      <div
        class="euiStat monSummaryStatusNoWrap__stat css-10hx1zo-euiStat-left"
      >
        <div
          class="euiText euiStat__description css-1f3uq2g-euiText-s"
        >
          <p
            aria-hidden="true"
          >
            Documents
          </p>
        </div>
        <p
          aria-hidden="true"
          class="euiTitle euiStat__title css-1qzsrmj-euiTitle-xxxs-euiStat__title-default"
        >
          24.8k
        </p>
        <p
          class="css-gb1zbv-euiScreenReaderOnly"
        >
          Documents 24.8k
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Summary Status Component should render metrics in a summary bar 1`] = `
<div
  class="monSummaryStatusNoWrap"
  intl="[object Object]"
>
  <div
    class="euiFlexGroup css-eu1fwp-euiFlexGroup-responsive-m-spaceBetween-center-row"
  >
    <div
      class="euiFlexItem eui-textTruncate css-kpsrin-euiFlexItem-growZero"
      style="max-width:200px"
    >
      <div
        class="euiStat monSummaryStatusNoWrap__stat css-10hx1zo-euiStat-left"
        data-test-subj="status"
      >
        <div
          class="euiText euiStat__description css-1f3uq2g-euiText-s"
        >
          <p
            aria-hidden="true"
          >
            Status
          </p>
        </div>
        <p
          aria-hidden="true"
          class="euiTitle euiStat__title css-1qzsrmj-euiTitle-xxxs-euiStat__title-default"
        >
          Status: 
          <span
            alt="Status: green"
            color="success"
            data-euiicon-type="dot"
            data-test-subj="statusIcon"
          />
           Green
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
      data-test-subj="freeDiskSpace"
      style="max-width:200px"
    >
      <div
        class="euiStat monSummaryStatusNoWrap__stat css-10hx1zo-euiStat-left"
      >
        <div
          class="euiText euiStat__description css-1f3uq2g-euiText-s"
        >
          <p
            aria-hidden="true"
          >
            Free Disk Space
          </p>
        </div>
        <p
          aria-hidden="true"
          class="euiTitle euiStat__title css-1qzsrmj-euiTitle-xxxs-euiStat__title-default"
        >
          173.9 GB
        </p>
        <p
          class="css-gb1zbv-euiScreenReaderOnly"
        >
          Free Disk Space 173.9 GB
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem css-kpsrin-euiFlexItem-growZero"
      data-test-subj="documentCount"
      style="max-width:200px"
    >
      <div
        class="euiStat monSummaryStatusNoWrap__stat css-10hx1zo-euiStat-left"
      >
        <div
          class="euiText euiStat__description css-1f3uq2g-euiText-s"
        >
          <p
            aria-hidden="true"
          >
            Documents
          </p>
        </div>
        <p
          aria-hidden="true"
          class="euiTitle euiStat__title css-1qzsrmj-euiTitle-xxxs-euiStat__title-default"
        >
          24.8k
        </p>
        <p
          class="css-gb1zbv-euiScreenReaderOnly"
        >
          Documents 24.8k
        </p>
      </div>
    </div>
  </div>
</div>
`;
